[package]
name = "lorealdb"
version = "0.1.0"
edition = "2021"


[lib]
name = "lorealdb"
crate-type = [ "cdylib", "rlib" ]


[dependencies]
redb = "2.1.1"
simd-json = "0.13.0"


[dependencies.pyo3]
version = "0.22.0"
features = [ "extension-module", "abi3-py310" ]


[dev-dependencies]
tempfile = "3.10.1"
