[build-system]
requires = [ "maturin>=1.5,<2.0" ]
build-backend = "maturin"


[project]
name = "lorealdb"
version = "0.1.0"
description = "An ultra-fast, local-first embedded document storage engine for Python, built in Rust."
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Rust",
"Programming Language :: Python :: Implementation :: CPython",
"Topic :: Database"
]


[tool.maturin]
features = [ "pyo3/extension-module", "pyo3/abi3-py310" ]
binding = "pyo3"
manifest-path = "Cargo.toml"
module-name = "lorealdb.lorealdb"
